Change to NPM email

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   ],
   "author": "Fokke Zandbergen",
   "maintainers": [
-    "Fokke Zandbergen<fzandbergen@appcelerator.com>"
+    "Fokke Zandbergen<mail@fokkezb.nl>"
   ],
   "contributors": [{
     "name": "Fokke Zandbergen"
