--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "pkginfo": "^0.3.0"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.10.0"
+    "grunt-cli": "*",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-jscs": "^1.5.0",
+    "jscs-jsdoc": "^0.4.5"
   }
 }
