--- a/package.json
+++ b/package.json
@@ -33,15 +33,12 @@
   },
   "homepage": "https://github.com/appcelerator/passport-appc",
   "dependencies": {
-    "appc-platform-sdk": "^1.0.38",
+    "appc-platform-sdk": "^1.0.42",
     "passport-strategy": "^1.0.0",
     "pkginfo": "^0.3.0"
   },
   "devDependencies": {
     "grunt-appc-js": "^0.3.0",
-    "grunt-cli": "*",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-jscs": "^1.5.0",
-    "jscs-jsdoc": "^0.4.5"
+    "grunt-cli": "*"
   }
 }
